namespace DesignPatterns.AbstractFactoryPattern
{
    public interface Color
    {
         void fill();
    }
}