namespace DesignPatterns.AbstractFactoryPattern
{
    public interface Shape
    {
         void draw();
    }
}